--- a/webTree/about/indexBACKUP.html
+++ b/webTree/about/indexBACKUP.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> aboutBAKA </title>
 
     <link rel="stylesheet" href="../../style/mainStyle.css" type="text/css">
     <link rel="stylesheet" href="../../style/scrollBAR.css" type="text/css">
 
-    <link rel="icon" href="../../favicon/aboutPAGE.png" type="image/png">
+    <link rel="icon" href="../../favicon/ico/aboutP.ico" type="image/x-icon">
 
     <script type="text/javascript" src="../../script/playAUDIO.js"> </script>
     <script type="text/javascript" src="../../script/currentTime.js"> </script>
@@ -132,10 +132,10 @@
 
 <body>
     <div class="headMENU">
-        <a href="../homepage" class="logo"> <img src="../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
+        <a href="../homepage/index.html" class="logo"> <img src="../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../homepage" title=">> homePage"> homePage </a>
-            <a href="../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
             <a class="active" href="javascript:alert('[ i ]  you are currently on this subpage !!')" title="[ i ] you are here"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
