--- a/webTree/homepage/featuredPosts/index.html
+++ b/webTree/homepage/featuredPosts/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> featuredPosts </title>
 
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
     <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
 
-    <link rel="icon" href="../../../favicon/nine9.png" type="image/png">
+    <link rel="icon" href="../../../favicon/ico/nine9.ico" type="image/x-icon">
 
     <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
     <script type="text/javascript" src="../../../script/quickViewTXT.js"> </script>
@@ -33,11 +33,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
         <div class="headMENU-R headMENUalt">
-            <a class="active" href=".." title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a class="active" href="../index.html" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
@@ -56,7 +56,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> homePAGE </a> </h1>
+            <h1> <a href="../index.html"> homePAGE </a> </h1>
             <h2 style="padding-left: 65px;"> └────────── featuredPosts </h2>
         </div>
 
@@ -71,7 +71,7 @@
                     <p style="cursor: help;"> <span> <a onclick="quickTXT02()"> [ i ]&nbsp;&nbsp;table of contents </a> </span> </p>
                     <p style="cursor: help;"> <span> <a onclick="quickTXT03()"> [ i ]&nbsp;&nbsp;software used </a> </span> </p>
                     <p style="cursor: help;"> <span> <a onclick="quickTXT04()"> [ ? ]&nbsp;&nbsp;who is chiruno </a> </span> </p>
-                    <p> <span> <a href="../../404/crash" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
+                    <p> <span> <a href="../../404/crash/index.html" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
                 </div>
             </p>
         </div>
@@ -86,7 +86,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="../../profiles/sub2pew" style="color: aqua;">@sub2pew</a>
+                                <a href="../../profiles/sub2pew/index.html" class="gradRAINBOW gradCYAN">@sub2pew</a>
                                 <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -108,13 +108,13 @@
                     <p>
                         vkontakte&nbsp;&nbsp;::&nbsp;<span><a href="https://vk.com/sub2pew" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">@sub2pew</a></span> <br>
                         telegram&nbsp;&nbsp;&nbsp;::&nbsp;<span><a href="https://telegram.me/sub2pew" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">@sub2pew</a></span>&nbsp;<span class="toolTIP"><a href="tg://resolve?domain=sub2pew" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
-                        whatsapp01&nbsp;::&nbsp;<span><a id="changeTXT01" onclick="clickTXT01()">[showPhoneNUM]</a></span>&nbsp;<span class="toolTIP"><a href="https://web.whatsapp.com/send/?phone=%2B77088489066&text&type=phone_number" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
-                        whatsapp02&nbsp;::&nbsp;<span><a id="changeTXT02" onclick="clickTXT02()">[showPhoneNUM]</a></span>&nbsp;<span class="toolTIP"><a href="https://web.whatsapp.com/send/?phone=%2B77770732414&text&type=phone_number" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
+                        <span style="opacity: 45%;">whatsapp01</span>&nbsp;::&nbsp;<span><a id="changeTXT01" onclick="clickTXT01()">[showPhoneNUM]</a></span>&nbsp;<span class="toolTIP"><a href="https://web.whatsapp.com/send/?phone=0&text&type=phone_number" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
+                        <span style="opacity: 45%;">whatsapp02</span>&nbsp;::&nbsp;<span><a id="changeTXT02" onclick="clickTXT02()">[showPhoneNUM]</a></span>&nbsp;<span class="toolTIP"><a href="https://web.whatsapp.com/send/?phone=0&text&type=phone_number" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
                         discord&nbsp;&nbsp;&nbsp;&nbsp;::&nbsp;<span><a href="https://discordapp.com/users/470885901531217920" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">sub2pew#5392</a></span> <br>
                         steamMAIN&nbsp;&nbsp;::&nbsp;<span><a href="https://steamcommunity.com/profiles/76561198875120471" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">@sub2pew</a></span> <br>
                     </p>
                 </div>
-                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/sub2pew"> [&gt;] open user profile.. </a> </span> </p>
+                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/sub2pew/index.html"> [&gt;] open user profile.. </a> </span> </p>
             </div>
             
             <div class="textBORDER" style="float: left; width: 550px;">
@@ -122,7 +122,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="../../profiles/cumgur" style="color: #ff9e9e;">@cumgur</a>
+                                <a href="../../profiles/cumgur/index.html" style="color: #ff9e9e;">@cumgur</a>
                                 <span class="toolTIPtxt" style="margin-left: -50px"> member </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -139,7 +139,7 @@
                     I like listening to electronic and I like talking to people who are interested in creativity, just like me. <br> <br>
                     My goal is - I want to become a programmer!
                 </p>
-                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/cumgur"> [&gt;] open user profile.. </a> </span> </p>
+                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/cumgur/index.html"> [&gt;] open user profile.. </a> </span> </p>
             </div>
         </div>
     </div>
