--- a/webTree/profiles/sub2pew/animeTitleLOG/index.html
+++ b/webTree/profiles/sub2pew/animeTitleLOG/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> animeTTL#log </title>
 
@@ -13,10 +13,9 @@
     <link rel="stylesheet" href="../../../../style/cssFonts/fontConsolas.css" type="text/css">
     <link rel="stylesheet" href="../../../../style/cssFonts/fontMeiryo.css" type="text/css">
 
-    <link rel="icon" href="../../../../favicon/nine9.png" type="image/png">
+    <link rel="icon" href="../../../../favicon/ico/nine9.ico" type="image/x-icon">
 
     <script type="text/javascript" src="../../../../script/changeTEXT.js"> </script>
-    <script type="text/javascript" src="../../../../script/userInfo/userInfoSUB2PEW.js"> </script>
     <script type="text/javascript" src="../../../../script/playAUDIO.js"> </script>
     <script type="text/javascript" src="../../../../script/currentTime.js"> </script>
 
@@ -39,11 +38,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../.." class="logo"> <img src="../../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../../index.html" class="logo"> <img src="../../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../../homepage" title=">> homePage"> homePage </a>
-            <a href="../../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -65,8 +64,8 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../.."> profiles </a> </h1>
-            <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href=".."> <span style="color: aqua"> @sub2pew </span> </a> </h2>
+            <h1> <a href="../../index.html"> profiles </a> </h1>
+            <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="../index.html"> <span style="color: aqua"> @sub2pew </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── animeTTL#log </h3>
 
             <div style="padding: 10px;"> </div>
@@ -84,7 +83,7 @@
             <div class="borderLINE" style="float: right; height: 75%"> </div>
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                     <div style="padding-left: 35px">
-                        <p> <span> <a href="../../../404"> [ i ]&nbsp;&nbsp;currentTitle </a> </span> </p>
+                        <p> <span> <a href="../../../404/index.html"> [ i ]&nbsp;&nbsp;currentTitle </a> </span> </p>
                         <p style="filter: brightness(75%);" title="[ i ] you are here"> <span> <a href=""> [ i ]&nbsp;&nbsp;titleTimeline </a> </span> </p>
                     </div>
                 </p>
@@ -96,9 +95,9 @@
                     <div class="borderLINE" style="float: right; height: 75%"> </div>
                         <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                             <div class="fontMeiryo" style="padding-left: 35px; font-size: 12.5px;">
-                                <p> <span> <a href="../../../404"> [ 1 ]&nbsp;&nbsp;東のエデン </a> </span> </p>
-                                <p> <span> <a href="../../../404"> [ 2 ]&nbsp;&nbsp;それでも歩は寄せてくる </a> </span> </p>
-                                <p> <span> <a href="../../../404"> [ 3 ]&nbsp;&nbsp;らき☆すた </a> </span> </p>
+                                <p> <span> <a href="../../../404/index.html"> [ 1 ]&nbsp;&nbsp;東のエデン </a> </span> </p>
+                                <p> <span> <a href="../../../404/index.html"> [ 2 ]&nbsp;&nbsp;それでも歩は寄せてくる </a> </span> </p>
+                                <p> <span> <a href="../../../404/index.html"> [ 3 ]&nbsp;&nbsp;らき☆すた </a> </span> </p>
                             </div>
                         </p>
                 </div>
