--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <title> [ i ] Redirecting... </title>
 
     <script>
         setTimeout(function() {
-            window.location.href = "webTree/homepage";
+            window.location.href = "webTree/homepage/index.html";
         }, 5000);
     </script>
     <script type="text/javascript" src="script/countdownTime.js"> </script>
@@ -37,6 +37,6 @@
 </head>
 <body>
     <p> auto redirect in <span id="countdownREDIRECT"> 5 </span> seconds ... </p>
-    <p><a href="webTree/homepage" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
+    <p><a href="webTree/homepage/index.html" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
 </body>
 </html>
