--- a/webTree/404/index.html
+++ b/webTree/404/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> [404] notFound </title>
 
-    <link rel="icon" href="../../favicon/errorFaceICOinvert.png" type="image/png">
+    <link rel="icon" href="../../favicon/ico/warning.ico" type="image/x-icon">
     <link rel="stylesheet" href="../../style/scrollBAR404.css" type="text/css">
 
     <style>
@@ -137,7 +137,7 @@
         <p class="errorCODE"> errorCODE: ERR_PAGE_DOES_NOT_EXIST </p>
         <div class="alignRIGHT">
             <a href="javascript:history.back()"> <button class="buttonMAIN" style="float: right; margin-right: 125px;"> goBACK </button> </a>
-            <a href="../homepage"> <button class="buttonMAIN buttonMAINalt" style="float: right; margin-right: 30px;"> homePAGE </button> </a>
+            <a href="../homepage/index.html"> <button class="buttonMAIN buttonMAINalt" style="float: right; margin-right: 30px;"> homePAGE </button> </a>
         </div>
     </div>
 </body>
