--- a/webTree/funstuff/imagesGIFs/index.html
+++ b/webTree/funstuff/imagesGIFs/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> images & GIFs </title>
 
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
     <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
 
-    <link rel="icon" href="../../../favicon/funSTUFF.png" type="icon/png">
+    <link rel="icon" href="../../../favicon/ico/funSTUFF.ico" type="icon/png">
 
     <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
     <script type="text/javascript" src="../../../script/currentTime.js"> </script>
@@ -92,11 +92,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage" title=">> homePage"> homePage </a>
-            <a class="active" href=".." title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a class="active" href="../index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -116,7 +116,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> funSTUFF </a> </h1>
+            <h1> <a href="../index.html"> funSTUFF </a> </h1>
             <h2 style="padding-left: 75px;"> └────────── images & GIFs </h2>
         </div>
         
