--- a/webTree/homepage/index.html
+++ b/webTree/homepage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> certifiedBAKA </title>
 
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../style/scrollBAR.css" type="text/css">
     <link rel="stylesheet" href="../../style/cssFonts/fontConsolas.css" type="text/css">
 
-    <link rel="icon" href="../../favicon/nine9.png" type="image/png">
+    <link rel="icon" href="../../favicon/ico/nine9.ico" type="image/x-icon">
 
     <script type="text/javascript" src="../../script/playAUDIO.js"> </script>
     <script type="text/javascript" src="../../script/currentTime.js"> </script>
@@ -162,8 +162,8 @@
         <a href="javascript:alert('[ i ]  the homepage of this entire project !')" class="logo"> <img src="../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
         <div class="headMENU-R headMENUalt">
             <a class="active" href="javascript:alert('[ i ]  you are currently on this subpage !!')" title="[ i ] you are here"> homePage </a>
-            <a href="../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -190,8 +190,8 @@
         </div>
 
         <div style="padding-top: 20px; position: relative; left: 50%; margin-left: -100px;">
-            <a href="featuredPosts"> <button class="buttonNAV button01" style="position: absolute; margin-left: 175px;"> featuredPosts </button> </a>
-            <a href="../profiles"><button class="buttonNAV button02" style="position: absolute; margin-left: -175px;"> membersBAKA </button> </a> 
+            <a href="featuredPosts/index.html"> <button class="buttonNAV button01" style="position: absolute; margin-left: 175px;"> featuredPosts </button> </a>
+            <a href="../profiles/index.html"><button class="buttonNAV button02" style="position: absolute; margin-left: -175px;"> membersBAKA </button> </a> 
         </div>
     </div>
 
