--- a/webTree/profiles/chigurh/index.html
+++ b/webTree/profiles/chigurh/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> @chigurh </title>
 
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
     <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
 
-    <link rel="icon" href="../../../favicon/nine9.png" type="image/png">
+    <link rel="icon" href="../../../favicon/ico/profilesB.ico" type="image/x-icon">
 
     <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
     <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
@@ -35,11 +35,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -61,7 +61,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> profiles </a> </h1>
+            <h1> <a href="../index.html"> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span class="gradRAINBOW" style="color: white"> @chigurh</span> </a> </h2>
             <h3 style="padding-left: 275px;"> └────────── accountPage </h3>
 
@@ -112,7 +112,7 @@
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                     MAN WHAT THE <span class="textSPOILER">FUCK</span> ?? THERE IS MOREEE LET'S GOOO
                     <span class="mediaPOST"> <br>
-                        <video src="../../../media/postMEDIA/vid/chigurh/chigurhP03.MP4" preload="metadata" controls poster="../../../imgs/nfswTHUMBalt.png" class="mediaROUNDED" style=" width: 250px; vertical-align: top;" alt="chigurhP03.mp4"> notSupportedVIDEO </video>
+                        <video src="../../../media/postMEDIA/vid/chigurh/chigurhP03.MP4" preload="metadata" controls poster="../../../imgs/removedTHUMB.png" class="mediaROUNDED" style=" width: 250px; vertical-align: top;" alt="chigurhP03.mp4"> notSupportedVIDEO </video>
                     </span> <br>
                 </p>
                 <div id="replyBUTTON">
