--- a/webTree/profiles/sub2pew/[old] index.html
+++ b/webTree/profiles/sub2pew/[old] index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> @sub2pew </title>
 
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../../style/membersStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
 
-    <link rel="icon" href="../../../favicon/nine9.png" type="image/png">
+    <link rel="icon" href="../../../favicon/ico/nine9.ico" type="image/x-icon">
 
     <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
     <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
@@ -34,11 +34,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
@@ -60,7 +60,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> profiles </a> </h1>
+            <h1> <a href="../index.html"> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span style="color: aqua"> @sub2pew </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── accountPage </h3>
 
@@ -106,7 +106,7 @@
                 <div class="borderLINE" style="float: left; height: 75%;"> </div>
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                     things are going pretty smoothly by now... <br> <br>
-                    I've been working on <span><a href="../../funstuff" target="_blank">funSTUFF</a></span> recently and encountered
+                    I've been working on <span><a href="../../funstuff/index.html" target="_blank">funSTUFF</a></span> recently and encountered
                     several performance issues when displaying too much
                     images at once. some of them were in high quality xD. <br> <br>
 
