--- a/webTree/profiles/sub2pew/index.html
+++ b/webTree/profiles/sub2pew/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> @sub2pew </title>
 
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
     <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
 
-    <link rel="icon" href="../../../favicon/nine9.png" type="image/png">
+    <link rel="icon" href="../../../favicon/ico/profilesB.ico" type="image/x-icon">
 
     <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
     <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
@@ -35,11 +35,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -61,8 +61,8 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> profiles </a> </h1>
-            <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span style="color: aqua"> @sub2pew </span> </a> </h2>
+            <h1> <a href="../index.html"> profiles </a> </h1>
+            <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span class="gradRAINBOW gradCYAN"> @sub2pew </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── accountPage </h3>
 
             <div style="padding: 10px;"> </div>
@@ -95,7 +95,7 @@
                     <div class="borderLINE" style="float: right; height: 75%"> </div>
                         <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                             <div style="padding-left: 35px">
-                                <p> <span> <a href="animeTitleLOG"> [ i ]&nbsp;&nbsp;animeTTL#log </a> </span> </p>
+                                <p> <span> <a href="animeTitleLOG/index.html"> [ i ]&nbsp;&nbsp;animeTTL#log </a> </span> </p>
                             </div>
                         </p>
                 </div>
@@ -107,7 +107,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="javascript:window.location.href=window.location.href" style="color: aqua;">@sub2pew</a>
+                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW gradCYAN">@sub2pew</a>
                                 <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -132,8 +132,8 @@
                             &emsp;&emsp;&emsp; ・ current time display <br> <br>
 
                             – updated & added a new webpage: <br>
-                            &emsp;&emsp;&emsp; ・ <span><a href="../../funstuff/playGround">playGround</a></span> <br>
-                            &emsp;&emsp;&emsp; ・ <span><a href="../../funstuff/playGround/windows98">certifiedBAKA98</a></span> <br> <br>
+                            &emsp;&emsp;&emsp; ・ <span><a href="../../funstuff/playGround/index.html">playGround</a></span> <br>
+                            &emsp;&emsp;&emsp; ・ <span><a href="../../funstuff/playGround/windows98/index.html">certifiedBAKA98</a></span> <br> <br>
 
                             – code clean-up in some HTML files; <br> <br>
                             – implemented pre-made libraries: <br>
@@ -144,7 +144,7 @@
                     </div>
                     <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                         I really liked playing around with libraries! they're convenientt to use, but sometimes they are problematic. <br> <br>
-                        So, that's all I wanted to share with you, my fellow reader! See you next time, and happy coding!
+                        so, that's all I wanted to share with you, my fellow reader! See you next time, and happy coding!
                     </p>
                 </p>
                 <div id="replyBUTTON">
@@ -165,7 +165,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="javascript:window.location.href=window.location.href" style="color: aqua;">@sub2pew</a>
+                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW gradCYAN">@sub2pew</a>
                                 <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -177,7 +177,7 @@
                 <div class="borderLINE" style="float: left; height: 75%;"> </div>
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                     things are going pretty smoothly by now... <br> <br>
-                    I've been working on <span><a href="../../funstuff">funSTUFF</a></span> recently and encountered
+                    I've been working on <span><a href="../../funstuff/index.html">funSTUFF</a></span> recently and encountered
                     several performance issues when displaying too much
                     images at once. some of them were in high quality xD. <br> <br>
 
@@ -210,7 +210,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="javascript:window.location.href=window.location.href" style="color: aqua;">@sub2pew</a>
+                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW gradCYAN">@sub2pew</a>
                                 <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -245,7 +245,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="javascript:window.location.href=window.location.href" style="color: aqua;">@sub2pew</a>
+                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW gradCYAN">@sub2pew</a>
                                 <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -267,8 +267,8 @@
                     <p>
                         vkontakte&nbsp;&nbsp;::&nbsp;<span><a href="https://vk.com/sub2pew" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">@sub2pew</a></span> <br>
                         telegram&nbsp;&nbsp;&nbsp;::&nbsp;<span><a href="https://telegram.me/sub2pew" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">@sub2pew</a></span>&nbsp;<span class="toolTIP"><a href="tg://resolve?domain=sub2pew" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
-                        whatsapp01&nbsp;::&nbsp;<span><a id="changeTXT01" onclick="clickTXT01()">[showPhoneNUM]</a></span>&nbsp;<span class="toolTIP"><a href="https://web.whatsapp.com/send/?phone=%2B77088489066&text&type=phone_number" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
-                        whatsapp02&nbsp;::&nbsp;<span><a id="changeTXT02" onclick="clickTXT02()">[showPhoneNUM]</a></span>&nbsp;<span class="toolTIP"><a href="https://web.whatsapp.com/send/?phone=%2B77770732414&text&type=phone_number" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
+                        <span style="opacity: 45%;">whatsapp01</span>&nbsp;::&nbsp;<span><a id="changeTXT01" onclick="clickTXT01()">[showPhoneNUM]</a></span>&nbsp;<span class="toolTIP"><a href="https://web.whatsapp.com/send/?phone=0&text&type=phone_number" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
+                        <span style="opacity: 45%;">whatsapp02</span>&nbsp;::&nbsp;<span><a id="changeTXT02" onclick="clickTXT02()">[showPhoneNUM]</a></span>&nbsp;<span class="toolTIP"><a href="https://web.whatsapp.com/send/?phone=0&text&type=phone_number" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">[dLINK]</a><span class="toolTIPtxt"> directLINK </span></span><br>
                         discord&nbsp;&nbsp;&nbsp;&nbsp;::&nbsp;<span><a href="https://discordapp.com/users/470885901531217920" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">sub2pew#5392</a></span> <br>
                         steamMAIN&nbsp;&nbsp;::&nbsp;<span><a href="https://steamcommunity.com/profiles/76561198875120471" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">@sub2pew</a></span> <br>
                     </p>
@@ -290,7 +290,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="javascript:window.location.href=window.location.href" style="color: aqua;">@sub2pew</a>
+                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW gradCYAN">@sub2pew</a>
                                 <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
