--- a/webTree/profiles/sub2pew/animeTitleLOG/index.html
+++ b/webTree/profiles/sub2pew/animeTitleLOG/index.html
@@ -15,10 +15,6 @@
 
     <link rel="icon" href="../../../../favicon/ico/nine9.ico" type="image/x-icon">
 
-    <script type="text/javascript" src="../../../../script/changeTEXT.js"> </script>
-    <script type="text/javascript" src="../../../../script/playAUDIO.js"> </script>
-    <script type="text/javascript" src="../../../../script/currentTime.js"> </script>
-
     <style>
         h1, h2, h3 {
         margin-left: 25px;
@@ -38,11 +34,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../../index.html" class="logo"> <img src="../../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../.." class="logo"> <img src="../../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../../homepage/index.html" title=">> homePage"> homePage </a>
-            <a href="../../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../../../homepage" title=">> homePage"> homePage </a>
+            <a href="../../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -64,8 +60,8 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../../index.html"> profiles </a> </h1>
-            <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="../index.html"> <span style="color: aqua"> @sub2pew </span> </a> </h2>
+            <h1> <a href="../.."> profiles </a> </h1>
+            <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href=".."> <span style="color: aqua"> @sub2pew </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── animeTTL#log </h3>
 
             <div style="padding: 10px;"> </div>
@@ -83,7 +79,7 @@
             <div class="borderLINE" style="float: right; height: 75%"> </div>
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                     <div style="padding-left: 35px">
-                        <p> <span> <a href="../../../404/index.html"> [ i ]&nbsp;&nbsp;currentTitle </a> </span> </p>
+                        <p> <span> <a href="../../../404"> [ i ]&nbsp;&nbsp;currentTitle </a> </span> </p>
                         <p style="filter: brightness(75%);" title="[ i ] you are here"> <span> <a href=""> [ i ]&nbsp;&nbsp;titleTimeline </a> </span> </p>
                     </div>
                 </p>
@@ -95,9 +91,9 @@
                     <div class="borderLINE" style="float: right; height: 75%"> </div>
                         <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                             <div class="fontMeiryo" style="padding-left: 35px; font-size: 12.5px;">
-                                <p> <span> <a href="../../../404/index.html"> [ 1 ]&nbsp;&nbsp;東のエデン </a> </span> </p>
-                                <p> <span> <a href="../../../404/index.html"> [ 2 ]&nbsp;&nbsp;それでも歩は寄せてくる </a> </span> </p>
-                                <p> <span> <a href="../../../404/index.html"> [ 3 ]&nbsp;&nbsp;らき☆すた </a> </span> </p>
+                                <p> <span> <a href="../../../404"> [ 1 ]&nbsp;&nbsp;東のエデン </a> </span> </p>
+                                <p> <span> <a href="../../../404"> [ 2 ]&nbsp;&nbsp;それでも歩は寄せてくる </a> </span> </p>
+                                <p> <span> <a href="../../../404"> [ 3 ]&nbsp;&nbsp;らき☆すた </a> </span> </p>
                             </div>
                         </p>
                 </div>
@@ -318,5 +314,9 @@
             </div>
         </div>
     </div>
+
+    <!-- javacript -->
+    <script type="text/javascript" src="../../../../script/playAUDIO.js"> </script>
+    <script type="text/javascript" src="../../../../script/currentTime.js"> </script>
 </body>
 </html>
