--- a/webTree/funstuff/imagesGIFs/index.html
+++ b/webTree/funstuff/imagesGIFs/index.html
@@ -14,9 +14,6 @@
 
     <link rel="icon" href="../../../favicon/ico/funSTUFF.ico" type="icon/png">
 
-    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
-    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
-
     <style>
         h1, h2, h3 {
             margin-left: 25px;
@@ -92,11 +89,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../index.html" class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
+        <a href=".." class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
-            <a class="active" href="../index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage" title=">> homePage"> homePage </a>
+            <a class="active" href=".." title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -116,7 +113,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../index.html"> funSTUFF </a> </h1>
+            <h1> <a href=".."> funSTUFF </a> </h1>
             <h2 style="padding-left: 75px;"> └────────── images & GIFs </h2>
         </div>
         
@@ -416,5 +413,9 @@
                 </span> -->
         </div>
     </div>
+
+    <!-- javscript -->
+    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
+    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
 </body>
 </html>
