--- a/webTree/funstuff/index.html
+++ b/webTree/funstuff/index.html
@@ -14,12 +14,6 @@
 
     <link rel="icon" href="../../favicon/ico/funSTUFF.ico" type="icon/png">
 
-    <script type="text/javascript" src="../../script/changeTEXT.js"> </script>
-    <script type="text/javascript" src="../../script/replyPOST.js"> </script>
-    <script type="text/javascript" src="../../script/playAUDIO.js"> </script>
-    <script type="text/javascript" src="../../script/currentTime.js"> </script>
-    <script type="text/javascript" src="../../script/userInfo/userInfoGLOBAL.js"> </script>
-
     <style>
         h1, h2, h3 {
         margin-left: 25px;
@@ -44,9 +38,9 @@
     <div class="headMENU">
         <a href="javascript:alert('[ i ]  have some fun browsing here ! ~')" class="logo"> <img src="../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../homepage" title=">> homePage"> homePage </a>
             <a class="active" href="javascript:alert('[ i ]  you are currently on this subpage !!')" title="[ i ] you are here"> funSTUFF </a>
-            <a href="../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -81,7 +75,7 @@
                     <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'tableCONTENTS')"> [ i ]&nbsp;&nbsp;table of contents </a> </span> </p>
                     <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'software')"> [ i ]&nbsp;&nbsp;software used </a> </span> </p>
                     <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'chiruno1'); getUserInfo('rootUSER', 'chiruno2')"> [ ? ]&nbsp;&nbsp;who is chiruno </a> </span> </p>
-                    <p> <span> <a href="../404/crash/index.html" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
+                    <p> <span> <a href="../404/crash" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
                 </div>
             </p>
         </div>
@@ -110,10 +104,10 @@
                 <div class="textBORDERin" style="width: 250px;">
                     <div class="borderLINEin" style="float: left; height: 70%"> </div>
                     <p>
-                        <a href="../404/index.html"> [ &gt; ] video & movies&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
-                        <a href="imagesGIFs/index.html"> [ &gt; ] images & GIFs&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
-                        <a href="../404/index.html"> [ &gt; ] soundtracks&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
-                        <a href="playGround/index.html"> [ &gt; ] <span class="gradRAINBOW gradRUBY noHoverEFF">playGround</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
+                        <a href="../404"> [ &gt; ] video & movies&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
+                        <a href="imagesGIFs"> [ &gt; ] images & GIFs&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
+                        <a href="../404"> [ &gt; ] soundtracks&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
+                        <a href="playGround"> [ &gt; ] <span class="gradRAINBOW gradRUBY noHoverEFF">playGround</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
                     </p>
                 </div>
                 <p style="text-align: right; padding-top: 10px; padding-right: 15px">
@@ -125,5 +119,11 @@
             </div>
         </div>
     </div>
+
+    <!-- javascript -->
+    <script type="text/javascript" src="../../script/playAUDIO.js"> </script>
+    <script type="text/javascript" src="../../script/currentTime.js"> </script>
+    <script type="text/javascript" src="../../script/replyPOST.js"> </script>
+    <script type="text/javascript" src="../../script/userInfo/userInfoGLOBAL.js"> </script>
 </body>
 </html>
