--- a/webTree/funstuff/playGround/index.html
+++ b/webTree/funstuff/playGround/index.html
@@ -11,15 +11,10 @@
     <link rel="stylesheet" href="../../../style/funStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
     <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
+
     <link rel="stylesheet" href="../../../style/themeRUBY.css" type="text/css">
 
     <link rel="icon" href="../../../favicon/ico/funSTUFF.ico" type="image/x-icon">
-
-    <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
-    <script type="text/javascript" src="../../../script/userInfo/userInfoGLOBAL.js"> </script>
-    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
-    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
-    <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
 
     <style>
         h1, h2, h3 {
@@ -40,11 +35,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../index.html" class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
+        <a href=".." class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
-            <a class="active" href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage" title=">> homePage"> homePage </a>
+            <a class="active" href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -66,7 +61,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../index.html"> funSTUFF </a> </h1>
+            <h1> <a href=".."> funSTUFF </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <span style="color: aliceblue"> playGround </span> </h2>
         </div>
 
@@ -81,7 +76,7 @@
                         <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'tableCONTENTS')"> [ i ]&nbsp;&nbsp;table of contents </a> </span> </p>
                         <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'software')"> [ i ]&nbsp;&nbsp;software used </a> </span> </p>
                         <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'chiruno1'); getUserInfo('rootUSER', 'chiruno2')"> [ ? ]&nbsp;&nbsp;who is chiruno </a> </span> </p>
-                        <p> <span> <a href="../../404/crash/index.html" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
+                        <p> <span> <a href="../../404/crash" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
                     </div>
                 </p>
         </div>
@@ -113,8 +108,8 @@
                             <a class="gradRAINBOW gradGOLD" href=""> <span class="gradRAINBOW">[ ? ]</span> -- luckyLINK -- <span class="gradRAINBOW">[ ? ]</span> </a> <br>
                             <a class="gradRAINBOW gradGOLD" href=""> <span class="gradRAINBOW">[ ? ]</span> -- luckyLINK -- <span class="gradRAINBOW">[ ? ]</span> </a> <br>
                             <a class="gradRAINBOW gradGOLD" href=""> <span class="gradRAINBOW">[ ? ]</span> -- luckyLINK -- <span class="gradRAINBOW">[ ? ]</span> </a> <br>
-                            <a class="gradRAINBOW gradGOLD" href=""> <span class="gradRAINBOW">[ ? ]</span> -- luckyLINK -- <span class="gradRAINBOW">[ ? ]</span> </a> <br>
-                            <a class="gradRAINBOW gradGOLD" href="windows98/index.html"> <span class="gradRAINBOW">[ ? ]</span> -- luckyLINK -- <span class="gradRAINBOW">[ ? ]</span> </a> <br>
+                            <a class="gradRAINBOW gradGOLD" href="matrixMode"> <span class="gradRAINBOW">[ ? ]</span> -- luckyLINK -- <span class="gradRAINBOW">[ ? ]</span> </a> <br>
+                            <a class="gradRAINBOW gradGOLD" href="windows98"> <span class="gradRAINBOW">[ ? ]</span> -- luckyLINK -- <span class="gradRAINBOW">[ ? ]</span> </a> <br>
                         </p>
                     </div>
                     <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
@@ -131,5 +126,11 @@
             <!-- newPOST -->
         </div>
     </div>
+
+    <!-- javscript -->
+    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
+    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
+    <script type="text/javascript" src="../../../script/userInfo/userInfoGLOBAL.js"> </script>
+    <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
 </body>
 </html>
