--- a/webTree/homepage/featuredPosts/index.html
+++ b/webTree/homepage/featuredPosts/index.html
@@ -11,12 +11,7 @@
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
     <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
 
-    <link rel="icon" href="../../../favicon/ico/nine9.ico" type="image/x-icon">
-
-    <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
-    <script type="text/javascript" src="../../../script/quickViewTXT.js"> </script>
-    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
-    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
+    <link rel="icon" href="../../../favicon/ico/nine9.ico" type="image/x-icon">    
 
     <style>
         h1, h2, h3 {
@@ -33,11 +28,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../index.html" class="logo"> <img src="../../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
+        <a href=".." class="logo"> <img src="../../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
         <div class="headMENU-R headMENUalt">
-            <a class="active" href="../index.html" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a class="active" href=".." title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
@@ -56,7 +51,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../index.html"> homePAGE </a> </h1>
+            <h1> <a href=".."> homePAGE </a> </h1>
             <h2 style="padding-left: 65px;"> └────────── featuredPosts </h2>
         </div>
 
@@ -67,11 +62,11 @@
             <div class="borderLINE" style="float: right; height: 75%"> </div>
             <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                 <div style="padding-left: 35px">
-                    <p style="cursor: help;"> <span> <a onclick="quickTXT01()"> [ i ]&nbsp;&nbsp;about this project </a> </span> </p>
-                    <p style="cursor: help;"> <span> <a onclick="quickTXT02()"> [ i ]&nbsp;&nbsp;table of contents </a> </span> </p>
-                    <p style="cursor: help;"> <span> <a onclick="quickTXT03()"> [ i ]&nbsp;&nbsp;software used </a> </span> </p>
-                    <p style="cursor: help;"> <span> <a onclick="quickTXT04()"> [ ? ]&nbsp;&nbsp;who is chiruno </a> </span> </p>
-                    <p> <span> <a href="../../404/crash/index.html" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
+                    <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'about')"> [ i ]&nbsp;&nbsp;about this project </a> </span> </p>
+                    <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'tableCONTENTS')"> [ i ]&nbsp;&nbsp;table of contents </a> </span> </p>
+                    <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'software')"> [ i ]&nbsp;&nbsp;software used </a> </span> </p>
+                    <p style="cursor: help;"> <span> <a onclick="getUserInfo('rootUSER', 'chiruno1'); getUserInfo('rootUSER', 'chiruno2')"> [ ? ]&nbsp;&nbsp;who is chiruno </a> </span> </p>
+                    <p> <span> <a href="../../404/crash" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
                 </div>
             </p>
         </div>
@@ -86,7 +81,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="../../profiles/sub2pew/index.html" class="gradRAINBOW gradCYAN">@sub2pew</a>
+                                <a href="../../profiles/sub2pew" class="gradRAINBOW gradCYAN">@sub2pew</a>
                                 <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -114,7 +109,7 @@
                         steamMAIN&nbsp;&nbsp;::&nbsp;<span><a href="https://steamcommunity.com/profiles/76561198875120471" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">@sub2pew</a></span> <br>
                     </p>
                 </div>
-                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/sub2pew/index.html"> [&gt;] open user profile.. </a> </span> </p>
+                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/sub2pew"> [&gt;] open user profile.. </a> </span> </p>
             </div>
             
             <div class="textBORDER" style="float: left; width: 550px;">
@@ -122,7 +117,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="../../profiles/cumgur/index.html" style="color: #ff9e9e;">@cumgur</a>
+                                <a href="../../profiles/cumgur" style="color: #ff9e9e;">@cumgur</a>
                                 <span class="toolTIPtxt" style="margin-left: -50px"> member </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -139,9 +134,15 @@
                     I like listening to electronic and I like talking to people who are interested in creativity, just like me. <br> <br>
                     My goal is - I want to become a programmer!
                 </p>
-                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/cumgur/index.html"> [&gt;] open user profile.. </a> </span> </p>
+                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/cumgur"> [&gt;] open user profile.. </a> </span> </p>
             </div>
         </div>
     </div>
+    
+    <!-- javascript -->
+    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
+    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
+    <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
+    <script type="text/javascript" src="../../../script/userInfo/userInfoGLOBAL.js"> </script>
 </body>
 </html>
