--- a/webTree/profiles/chigurh/index.html
+++ b/webTree/profiles/chigurh/index.html
@@ -14,12 +14,6 @@
 
     <link rel="icon" href="../../../favicon/ico/profilesB.ico" type="image/x-icon">
 
-    <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
-    <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
-    <script type="text/javascript" src="../../../script/userInfo/userInfoGLOBAL.js"> </script>
-    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
-    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
-
     <style>
         h1, h2, h3 {
         margin-left: 25px;
@@ -35,11 +29,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -61,7 +55,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../index.html"> profiles </a> </h1>
+            <h1> <a href=".."> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span class="gradRAINBOW" style="color: white"> @chigurh</span> </a> </h2>
             <h3 style="padding-left: 275px;"> └────────── accountPage </h3>
 
@@ -196,5 +190,11 @@
             </div>
         </div>
     </div>
+
+    <!-- javascript -->
+    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
+    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
+    <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
+    <script type="text/javascript" src="../../../script/userInfo/userInfoGLOBAL.js"> </script>
 </body>
 </html>
