--- a/webTree/profiles/sub2pew/index.html
+++ b/webTree/profiles/sub2pew/index.html
@@ -14,12 +14,6 @@
 
     <link rel="icon" href="../../../favicon/ico/profilesB.ico" type="image/x-icon">
 
-    <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
-    <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
-    <script type="text/javascript" src="../../../script/userInfo/userInfoGLOBAL.js"> </script>
-    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
-    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
-
     <style>
         h1, h2, h3 {
         margin-left: 25px;
@@ -35,11 +29,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -61,7 +55,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../index.html"> profiles </a> </h1>
+            <h1> <a href=".."> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span class="gradRAINBOW gradCYAN"> @sub2pew </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── accountPage </h3>
 
@@ -95,7 +89,7 @@
                     <div class="borderLINE" style="float: right; height: 75%"> </div>
                         <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                             <div style="padding-left: 35px">
-                                <p> <span> <a href="animeTitleLOG/index.html"> [ i ]&nbsp;&nbsp;animeTTL#log </a> </span> </p>
+                                <p> <span> <a href="animeTitleLOG"> [ i ]&nbsp;&nbsp;animeTTL#log </a> </span> </p>
                             </div>
                         </p>
                 </div>
@@ -132,8 +126,8 @@
                             &emsp;&emsp;&emsp; ・ current time display <br> <br>
 
                             – updated & added a new webpage: <br>
-                            &emsp;&emsp;&emsp; ・ <span><a href="../../funstuff/playGround/index.html">playGround</a></span> <br>
-                            &emsp;&emsp;&emsp; ・ <span><a href="../../funstuff/playGround/windows98/index.html">certifiedBAKA98</a></span> <br> <br>
+                            &emsp;&emsp;&emsp; ・ <span><a href="../../funstuff/playGround">playGround</a></span> <br>
+                            &emsp;&emsp;&emsp; ・ <span><a href="../../funstuff/playGround/windows98">certifiedBAKA98</a></span> <br> <br>
 
                             – code clean-up in some HTML files; <br> <br>
                             – implemented pre-made libraries: <br>
@@ -177,7 +171,7 @@
                 <div class="borderLINE" style="float: left; height: 75%;"> </div>
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                     things are going pretty smoothly by now... <br> <br>
-                    I've been working on <span><a href="../../funstuff/index.html">funSTUFF</a></span> recently and encountered
+                    I've been working on <span><a href="../../funstuff">funSTUFF</a></span> recently and encountered
                     several performance issues when displaying too much
                     images at once. some of them were in high quality xD. <br> <br>
 
@@ -319,5 +313,12 @@
             </div>
         </div>
     </div>
+
+    <!-- javascript -->
+    <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
+    <script type="text/javascript" src="../../../script/currentTime.js"> </script>
+    <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
+    <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
+    <script type="text/javascript" src="../../../script/userInfo/userInfoGLOBAL.js"> </script>
 </body>
 </html>
